--- a/src/app/lottery/lottery.module.css
+++ b/src/app/lottery/lottery.module.css
@@ -116,3 +116,37 @@
   background-color: #005bb5;
 }
   
+
+.winnerCard {
+  margin-top: 20px;
+  padding: 15px;
+  border: 1px solid var(--foreground);
+  border-radius: 5px;
+  background-color: var(--background);
+  text-align: left;
+}
+
+.winnerCard p {
+  margin: 5px 0;
+}
+
+/* Winners List */
+.winnerList {
+  list-style: none;
+  padding: 0;
+  margin: 20px 0;
+}
+
+.winnerItem {
+  border: 1px solid var(--foreground);
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
+  background-color: var(--background);
+  color: var(--foreground);
+}
+
+.winnerItem strong {
+  color: var(--foreground);
+  font-weight: bold;
+}
